syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/realPointer/chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
    rpc CreateChat(google.protobuf.Empty) returns (CreateChatResponse);
    rpc ConnectChat(ConnectChatRequest) returns (stream Message);
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateChatResponse {
    string chat_id = 1;
}

message ConnectChatRequest {
    string chat_id = 1;
    string username = 2;
}

message Message {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp created_at = 3;
}

message SendMessageRequest {
    string chat_id = 1;
    Message message = 2;
}